# KPop

./: .gitignore  .gitmodules  BUILD  README.md
.github/workflows/: build-binaries.yml
images/: KPop-DataFormats.pptx  KPop-Embeddings.pptx
lib/: Interfaiss.ml  KMerDB.ml  KMerDB_Base.ml  Matrix.ml  Space.ml  Twisted.ml  Twister.ml  dune  interfaiss.cpp  interfaiss.h  interfaiss_ocaml.c
src/: KPopTwist
test/: dune
test/Primer/Test/: Test.fasta
test/Primer/Train/: CLASS.txt  Train.fasta
